# gdb-mcp

./: README.md  TEST-RESULTS.md  TEST_RESULTS.md  TODO.md  pyproject.toml  pytest.ini  run-tests.py  server.py
examples/: PROMPT.txt  README.md  example-amd64  example-arm64  example.c
modules/: __init__.py  debuggerFactory.py  gdbTools.py  sessionManager.py
modules/base/: __init__.py  debuggerBase.py
modules/gdb/: __init__.py  gdbTools.py  sessionManager.py
modules/lldb/: __init__.py  lldbTools.py  sessionManager.py
tests/: __init__.py  conftest.py  test-gdbTools.py  test-integration.py  test-mcp-server.py  test-sessionManager.py
