[project]
name = "gdb-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for GDB debugging functionality"
authors = [
    {name = "smadi0x86", email = "smadi0x86dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.2",
    "mcp[cli]>=1.10.1",
    "pygdbmi>=0.11.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/smadi0x86/gdb-mcp"
Repository = "https://github.com/smadi0x86/gdb-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]
include = [
    "server.py",
    "modules/",
]
